src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_import_initial_state.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: screen
---
PasskeyImportScreen {
    input: "",
    validated: false,
    validation_error: None,
    words: None,
}
