src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_import_input_sequence.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: seq.to_string()
---
Sequence: import_input_sequence

Step 1: with_partial_input
─────────────────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                           Import Existing Passkey                          │
 └────────────────────────────────────────────────────────────────────────────┘


 Enter your 12 or 24 word Passkey (separated by spaces):

 ┌ Input ─────────────────────────────────────────────────────────────────────┐
 │> abandon ability able about                                                │
 │                                                                            │
 │Hint: Press Enter to validate when done                                     │
 └────────────────────────────────────────────────────────────────────────────┘







 ┌────────────────────────────────────────────────────────────────────────────┐
 │                        Enter: Validate    Esc: Back                        │
 └────────────────────────────────────────────────────────────────────────────┘


Step 2: after_backspace
──────────────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                           Import Existing Passkey                          │
 └────────────────────────────────────────────────────────────────────────────┘


 Enter your 12 or 24 word Passkey (separated by spaces):

 ┌ Input ─────────────────────────────────────────────────────────────────────┐
 │> abandon ability able abou                                                 │
 │                                                                            │
 │Hint: Press Enter to validate when done                                     │
 └────────────────────────────────────────────────────────────────────────────┘







 ┌────────────────────────────────────────────────────────────────────────────┐
 │                        Enter: Validate    Esc: Back                        │
 └────────────────────────────────────────────────────────────────────────────┘
