src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_import_render.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: output
---

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                           Import Existing Passkey                          │
 └────────────────────────────────────────────────────────────────────────────┘


 Enter your 12 or 24 word Passkey (separated by spaces):

 ┌ Input ─────────────────────────────────────────────────────────────────────┐
 │> Type Passkey here...                                                      │
 │                                                                            │
 │Hint: Press Enter to validate when done                                     │
 └────────────────────────────────────────────────────────────────────────────┘







 ┌────────────────────────────────────────────────────────────────────────────┐
 │                        Enter: Validate    Esc: Back                        │
 └────────────────────────────────────────────────────────────────────────────┘
