src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_import_render_initial.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: output
---

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                              导 入 已 有  Passkey                              │
 └────────────────────────────────────────────────────────────────────────────┘


 请 输 入 您 的  12 或  24 词  Passkey（ 用 空 格 分 隔 ） :

 ┌ 输 入  / Input ──────────────────────────────────────────────────────────────┐
 │> 在 此 输 入  Passkey...                                                       │
 │                                                                            │
 │提 示 : 输 入 完 成 后 按  Enter 验 证                                                │
 └────────────────────────────────────────────────────────────────────────────┘







 ┌────────────────────────────────────────────────────────────────────────────┐
 │                          Enter: 验 证     Esc: 返 回                           │
 └────────────────────────────────────────────────────────────────────────────┘
