src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_import_render_validated.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: output
---

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                           Import Existing Passkey                          │
 └────────────────────────────────────────────────────────────────────────────┘


 Enter your 12 or 24 word Passkey (separated by spaces):

 ┌ Input ─────────────────────────────────────────────────────────────────────┐
 │> abandon ability able about above absent absorb abstract absurd abuse      │
 │access accident account accuse act                                          │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ✗ Passkey must be 12 or 24 words (current: 15 words)






 ┌────────────────────────────────────────────────────────────────────────────┐
 │                        Enter: Validate    Esc: Back                        │
 └────────────────────────────────────────────────────────────────────────────┘
