src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_import_with_input.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: output
---

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                           Import Existing Passkey                          │
 └────────────────────────────────────────────────────────────────────────────┘


 Enter your 12 or 24 word Passkey (separated by spaces):

 ┌ Input ─────────────────────────────────────────────────────────────────────┐
 │> abc def                                                                   │
 │                                                                            │
 │Hint: Press Enter to validate when done                                     │
 └────────────────────────────────────────────────────────────────────────────┘







 ┌────────────────────────────────────────────────────────────────────────────┐
 │                        Enter: Validate    Esc: Back                        │
 └────────────────────────────────────────────────────────────────────────────┘
