src/tui/tests/snapshots/keyring_cli__tui__tests__screen_snapshot_tests__passkey_verify_render.snap
---
source: src/tui/tests/screen_snapshot_tests.rs
expression: output
---
┌Verify Your Passkey───────────────────────────────────────────────────────────┐
│                                                                              │
│              Please enter the following words from your passkey:             │
│                                                                              │
│                                  Word #1: _                                  │
│                                  Word #12:                                   │
│                                  Word #24:                                   │
│                                                                              │
│               TAB: Switch field  |  ENTER: Submit  |  ESC: Back              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
